k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  labels:
    io.kompose.service: api
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: api
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (HEAD)
      labels:
        io.kompose.network/fastapi-lab-default: "true"
        io.kompose.service: api
    spec:
      containers:
        - env:
            - name: PAMPS_DB__connect_args
              value: '{}'
            - name: PAMPS_DB__uri
              value: postgresql://postgres:postgres@db:5432/${PAMPS_DB:-pamps}
          image: xrbsx/fastapi-lab-api
          name: api
          ports:
            - containerPort: 8000
          resources: {}
          stdin: true
          tty: true
